--- a/index.html
+++ b/index.html
@@ -2,15 +2,24 @@
 <html lang="fr">
     <head>
         <meta charset="utf-8">
-        <title>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</title>
+        <title></title>
         <link rel="stylesheet" href="./style.css">
         <script src="./script.js"></script>
     </head>
 
     <body>
         <header class="header">
+            <p id="top"></p>
             <img src="http://placehold.it/200x200" alt=""/>
-            <nav class="nav">NAV Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</nav>
+            <nav class="nav">
+                <ul>
+                    <li><a href="#moi">Moi</a></li>
+                    <li><a href="#bio">Bio</a></li>
+                    <li><a href="#objectifs">Objectifs</a></li>
+                    <li><a href="#projets">Projets</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </nav>
         </header>
 
         <aside class="aside">
@@ -18,15 +27,46 @@
         </aside>
 
         <main class="main">
-            <section class="section">
-                SECTION 1 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            <section id="moi">
+                <h2>Moi</h2>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
             </section>
-            <section class="section">
-                SECTION 2 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            <section id="bio">
+                <h2>Bio</h2>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
             </section>
-            <section class="section">
-                SECTION 3 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            <section id="objectifs">
+                <h2>Objectifs</h2>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
             </section>
+            <section id="projets">
+                <h2>Projets</h2>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </section>
+            <section id="contact">
+                <h2>Contact</h2>
+                    <form action="http://live.codincamp.fr/mail.php" method="post">
+
+                        <fieldset id="informations">
+                            <legend>Vos informations</legend>
+                            <label for="name">Votre nom</label>
+                            <input type="text" name="name" id="name"/>
+                            <label for="email">Votre email</label>
+                            <input type="email" name="email" id="email"/>
+                        </fieldset>
+
+                        <fieldset id="votre_message">
+                            <legend>Votre message</legend>
+                            <label for="subject">Sujet</label>
+                            <input type="text" name="subject" id="subject"/>
+                            <label for="message">Votre message</label>
+                            <textarea cols="50" rows="20" name="message" id="message"></textarea>
+                        </fieldset>
+
+                        <input type="submit" name="envoyer" value="Envoyer" id="envoyer"/>
+                    </form>
+            </section>
+            <a class="a" href="#top">Retourner en haut</a>
         </main>
 
         <footer class="footer">
